fix: adjust font size for day names in calendar for better readability

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,7 +65,7 @@ body {
   color: #888;
   text-align: center;
   padding: 20px 0px;
-  font-size: 0.8rem;
+  font-size: 1rem;
   text-transform: uppercase;
 }
 
